--- a/yari/src/main/resources/application.properties
+++ b/yari/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=yari
+server.port=8081
+
+spring.datasource.url=jdbc:mysql://localhost:3306/yari
+spring.datasource.username=root
+spring.datasource.password=root1234
+
+
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl.auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
