--- a/yari/package.json
+++ b/yari/package.json
@@ -2,19 +2,11 @@
   "name": "yari",
   "version": "1.0.0",
   "main": "index.js",
-
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "yari": "file:"
-  },
-  "devDependencies": {
-    "tailwindcss": "^3.4.16"
-  }
+  "description": ""
 }
