--- a/yari/src/main/resources/application.properties
+++ b/yari/src/main/resources/application.properties
@@ -1,12 +1,19 @@
+# Application configuration
 spring.application.name=yari
 server.port=8081
 
+# Database configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/yari
 spring.datasource.username=root
-spring.datasource.password=root1234
-
-
+spring.datasource.password=12345678
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Hibernate and JPA configuration
 spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl.auto=update
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.format_sql=true
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Logging configuration
+logging.level.org.springframework=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
